--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hi there! my name is Pearl</h1>
-<p>Hey. I'm a Graphic Designer. Cool huh?</p>
-<a href="https://google.com"target="_blank" title="Let's go to Google">Click me! I am a link to go to my website</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test Page</title>
+</head>
+<body>
+	<h1>Hi there! my name is Pearl</h1>
+	<p>Hey. I'm a <b>Graphic Designer</b>. Cool huh?</p>
+	<a href="https://google.com"target="_blank" title="Let's go to Google">Click me! I am a link to go to my website</a>
+	<p>My name is:<br>
+	Pearl White</p>
+	<img src="img/bday.jpg"><img src="https://scontent-yyz1-1.xx.fbcdn.net/v/t1.15752-9/105455599_716554832430132_3692245178813062585_n.jpg?_nc_cat=103&_nc_sid=b96e70&_nc_ohc=tUjyz7wASeEAX9wZiQu&_nc_ht=scontent-yyz1-1.xx&oh=39038cfc86cc292a017cc389bfab1bad&oe=5F47802C">
+<</body>
+</html>
