--- a/test.html
+++ b/test.html
@@ -4,11 +4,11 @@
 	<title>Test Page</title>
 </head>
 <body>
-	<h1>Hi there! my name is Pearl</h1>
-	<p>Hey. I'm a <b>Graphic Designer</b>. Cool huh?</p>
-	<a href="https://google.com"target="_blank" title="Let's go to Google">Click me! I am a link to go to my website</a>
+	<h1>Hi there! Welcome to my website</h1>
+	<p>Hey. I'm a <b>Lawman</b>. Cool huh?</p>
+	<a href="https://en.wikipedia.org/wiki/Wyatt_Earp">Click me! I am a link to go to my website</a>
 	<p>My name is:<br>
-	Pearl White</p>
-	<img src="img/bday.jpg"><img src="https://scontent-yyz1-1.xx.fbcdn.net/v/t1.15752-9/105455599_716554832430132_3692245178813062585_n.jpg?_nc_cat=103&_nc_sid=b96e70&_nc_ohc=tUjyz7wASeEAX9wZiQu&_nc_ht=scontent-yyz1-1.xx&oh=39038cfc86cc292a017cc389bfab1bad&oe=5F47802C">
+	Wyatt Earp</p>
+	<img src="img/gunfight.jpg">
 <</body>
 </html>
